--- a/src/pages/video-library/video-library.scss
+++ b/src/pages/video-library/video-library.scss
@@ -4,9 +4,10 @@
   .title {
     margin-bottom: 3rem;
   }
-  
+
   .video-items {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
   }
 }
