revert background for player

--- a/src/components/video-player/video-player.scss
+++ b/src/components/video-player/video-player.scss
@@ -1,7 +1,7 @@
 .video-player {
   width: 500px;
   padding: 5px;
-  background: #ff997f;
+  background: #1b60b5a6;
   cursor: grabbing;
   border-radius: 4px;
   top: 30%;
