Go back logo + changed colors in the player and menu bar + changed size for playlist item

--- a/src/components/blueshift-tooltip/blueshift-tooltip.scss
+++ b/src/components/blueshift-tooltip/blueshift-tooltip.scss
@@ -1,12 +1,12 @@
 .blueshift-tooltip {
   .rc-tooltip-content {
     .rc-tooltip-arrow {
-      border-top-color: #97d3ff;
+      border-top-color: #6fbb98;
     }
     .rc-tooltip-inner {
       border-radius: 0;
       min-height: 0;
-      background: #97d3ff;
+      background: #6fbb98;
       color: #000;
     }
   }
