--- a/src/components/header-menu/header-menu.scss
+++ b/src/components/header-menu/header-menu.scss
@@ -4,12 +4,10 @@
   justify-content: space-between;
   flex-wrap: nowrap;
   height: 70px;
-  background-color: #2288cc;
+  background-color: #28819e;
   align-items: center;
 
   .logo {
-    margin-top: 15px;
-
     & > a {
       color: #fff;
       margin-left: 20px;
