--- a/src/components/video-player/video-player.scss
+++ b/src/components/video-player/video-player.scss
@@ -1,6 +1,6 @@
 .video-player {
   padding: 5px;
-  background: #1b60b5a6;
+  background: #6fbb98;
   cursor: grabbing;
   border-radius: 4px;
   height: 100%;
