--- a/src/pages/video-library/video-library.scss
+++ b/src/pages/video-library/video-library.scss
@@ -1,5 +1,6 @@
 .video-library {
-  text-align: center;
+  width: 1200px;
+  margin: auto;
 
   .title {
     margin-bottom: 3rem;
@@ -7,7 +8,6 @@
 
   .video-items {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
   }
 }
